--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "babel-jest": "^29.7.0",
     "eslint": "^8.57.0",
     "jest": "^29.7.0",
+    "jest-each": "^29.7.0",
     "jest-extended": "^4.0.2",
     "rollup": "^3.29.4",
     "rollup-plugin-dts": "^5.3.1",
