--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,10 @@
     "target": "esnext",
     "declaration": true,
     "outDir": "dist",
-    "isolatedModules": true
+    "isolatedModules": true,
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
   "include": ["src"]
 }
